
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

* The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.

[[v1.3.3]]
== 1.3.3 (17.01.2020)

icon:check[] Core: Fixed a bug in the link renderer that caused the language parameter to be ignored if the branch parameter was passed.

icon:check[] Core: The maximum transaction batch size when purging versions is now link:{{< relref "administration-guide.asciidoc" >}}#_general_settings[configurable]. Lowering the value from its default (10) will cause the version purge to take more time, but use less memory.

icon:plus[] Docker: The Gentics Mesh server docker container has been updated:

  * Additional group permissions will be set to the application folders to allow root group to access and write into those.
  * It is now possible to run the container with any uid. The user for the specified UID will automatically be created. This change enhances OpenShift support for the docker containers.
  * The pre-extracted embedded Elasticsearch folder has been removed from the server image to reduce the docker image size. The embedded ES will automatically be extracted to the `/mesh/elasticsearch` folder when embedded mode is enabled.
  * The JRE version in the docker image has been updated from version `11.0.3_7` to `11.0.5_10`.

[[v1.3.2]]
== 1.3.2 (12.12.2019)

icon:check[] Fixed a bug in the `{project}/nodes/{node}` endpoint that allowed nodes to be found even if the requested node is not part of the project.

icon:check[] Fixed a bug that caused errors if an entity was requested by UUID and that UUID was from an entity of another type.
