@@ -25,6 +25,10 @@ include::content/docs/variables.adoc-include[]
 
 * The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.
 
+[[pending]]
+
+icon:plus[] Settings: The `nodeName` setting can now be set to `$HOSTNAME` to automatically assign the server or container hostname as `nodeName`.
+
 [[v1.3.3]]
 == 1.3.3 (17.01.2020)
 
